core/cu29_derive/tests/compile_fail/cu_msg/invalid_file_path.rs
use cu29_derive::gen_cumsgs;

gen_cumsgs!("invalid/path/to/config.ron");

fn main() {}